# AlgorithmsTraining

./: CMakeLists.txt
CheckIfStringRotated/: CMakeLists.txt  main.cpp
CheckIfStringsPermitted/: CMakeLists.txt  README.md  main.cpp
ClockHands/: CMakeLists.txt  main.cpp
FindCommonLine/: CMakeLists.txt  main.cpp
FindKElementOfThreeFiveSeven/: CMakeLists.txt  main.cpp
IsPrimeNumber/: CMakeLists.txt  main.cpp
Lists/: CMakeLists.txt
Lists/calculateTreeSumm/: CMakeLists.txt  main.cpp
Lists/deleteDuplications/: CMakeLists.txt  main.cpp
Lists/deleteFromMiddle/: CMakeLists.txt  main.cpp
Lists/findKFromLast/: CMakeLists.txt  main.cpp
Lists/findListCircleRoot/: CMakeLists.txt  main.cpp
LocalMinimum/: CMakeLists.txt  LocalMinimum.h  README.md  main.cpp
LocalMinimum/src/: LocalMinimum.cpp
LocalMinimum/test/: CMakeLists.txt  localMinimumTest.cpp
MatrixSetZeros/: CMakeLists.txt  README.md  main.cpp
MatrixSpiralPrint/: CMakeLists.txt  main.cpp
MinSwaps/: CMakeLists.txt  README.md  main.cpp
PrimeList/: CMakeLists.txt  main.cpp
QueuesAndStasks/: CMakeLists.txt
ReverseForwardTree/: CMakeLists.txt  README.md  main.cpp
ReverseString/: CMakeLists.txt  README.md  main.cpp
RotateMatrix/: CMakeLists.txt  README.md  main.cpp
SetTreeBrother/: CMakeLists.txt  README.md  main.cpp
StringCompression/: CMakeLists.txt  README.md  main.cpp
StringSpaceReplacement/: CMakeLists.txt  main.cpp
TreeSort/: CMakeLists.txt  README.md  TreeSort.h  main.cpp
TreesGraphs/: CMakeLists.txt
UniqueCharacterString/: CMakeLists.txt  README.md  main.cpp
(+30 files in other folders)
